# renderkit

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RenderKit.spec  index.html  mkdocs.yml  objects.inv  pyproject.toml  test_output.txt
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: build-windows.yml  build.yml  ci.yml  docs.yml
api/config/: index.html
api/io/file_utils/: index.html
api/io/image_reader/: index.html
api/processing/color_space/: index.html
api/processing/contact_sheet/: index.html
api/processing/scaler/: index.html
api/processing/video_encoder/: index.html
api/processor/: index.html
api/sequence/: index.html
contributing/: index.html
development/: index.html
docs/: contributing.md  development.md  index.md  usage.md
docs/api/: config.md  image_video_processor.md  processor.md  sequence.md
docs/api/io/: file_utils.md  image_reader.md
docs/api/processing/: color_space.md  contact_sheet.md  scaler.md  video_encoder.md
examples/: api_usage.py  convert_exr_sequence.py
scripts/: build_ffmpeg_windows_msys2.bat  build_ffmpeg_windows_msys2.sh  build_ffmpeg_windows_msys2_bootstrap.sh  prune_ocio_config.py
search/: search_index.json
src/image_video_processor/: __init__.py  exceptions.py
src/image_video_processor/api/: __init__.py  processor.py
src/image_video_processor/cli/: __init__.py  main.py
src/image_video_processor/core/: __init__.py  config.py  converter.py  sequence.py
src/image_video_processor/io/: __init__.py  file_utils.py  image_reader.py
src/image_video_processor/processing/: __init__.py  color_space.py  scaler.py  video_encoder.py
src/image_video_processor/ui/: __init__.py  main_window.py  qt_compat.py  widgets.py
src/renderkit/: __init__.py  constants.py  exceptions.py  logging_utils.py  runtime.py
src/renderkit/api/: __init__.py  processor.py
src/renderkit/cli/: __init__.py  main.py
src/renderkit/core/: __init__.py  config.py  converter.py  ffmpeg_utils.py  profiler.py  sequence.py
src/renderkit/data/ocio/: config.ocio
src/renderkit/io/: __init__.py  file_info.py  file_utils.py  image_reader.py  oiio_cache.py
src/renderkit/processing/: __init__.py  burnin.py  color_space.py  contact_sheet.py  scaler.py  video_encoder.py
src/renderkit/ui/: __init__.py  collapsible_group.py  conversion_worker.py  file_info_worker.py  main_window.py  main_window_logic.py  main_window_ui.py  main_window_widgets.py  prototype_window.py  qt_compat.py  timeline_controller.py  widgets.py
src/renderkit/ui/icons/: __init__.py  downloaded the icons from here.url
src/renderkit/ui/stylesheets/: california.qss  kitsu_theme.qss  linear_dark.qss  matcha.qss  modern_dark.qss  modern_theme.qss  style.qss
tests/: __init__.py  check_exr_layers.py  debug_ocio.py  debug_ocio_processor.py  test_burnin.py  test_color_space.py  test_contact_sheet.py  test_converter.py  test_exr_metadata.py  test_file_utils.py  test_integration_real_files.py  test_ocio_env_setup.py  test_oiio_cache.py  test_sequence.py  test_ui.py  test_ui_logic_file_info.py  test_ui_logic_preview.py  test_ui_toggles.py  verify_multipart.py  verify_oiio.py  verify_refactor.py
usage/: index.html
